# RTSH26_hackathon

./: .gitignore  README.md  adaptive_image_generation_design_doc.md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/src/: campaign_pipeline.py  database.py  main.py  models.py  schemas.py
backend/src/assets/: create_description.py  create_embedding.py  crud.py  repository.py  router.py  service.py
backend/src/campaign_specs/: repository.py  router.py  service.py
backend/src/campaigns/: models.py  repository.py  router.py  service.py
backend/src/functions/: __init__.py  analysis.py  analytics.py  asset_processor.py  asset_selection.py  embedding.py  image.py  image_generator.py  orchestrator.py  prompt.py  router.py  scheduler.py  similarity.py  types.py
backend/src/steps/: deploy_to_google.py  evaluate_image_groups.py  generate_new_prompt.py  generate_step.py  get_analytics.py  search_new_assets.py  select_top_images.py
backend/src/target_groups/: repository.py  router.py  service.py
backend/tests/: test_evaluate_image_groups.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: AssetSelectionDialog.tsx  layout.tsx  sidebar.tsx
frontend/src/components/campaign-flow/: CampaignFlow.tsx  FlowSidebar.tsx
frontend/src/components/campaign-flow/nodes/: AnalyticsNode.tsx  EnhancementNode.tsx  ImageNode.tsx  PromptNode.tsx
frontend/src/components/campaign-flow/utils/: generateFlowLayout.ts
frontend/src/components/campaign-graph/: CampaignGraph.tsx  CampaignSpecDialog.tsx  GraphSidebar.tsx
frontend/src/components/campaign-graph/nodes/: AnalyticsNode.tsx  ImageNode.tsx  TargetGroupNode.tsx
frontend/src/components/campaign-graph/utils/: generateGraphLayout.ts
frontend/src/lib/: mockFlowData.ts  transformCampaignData.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/api/hooks/: useAssets.ts  useCampaignGraphData.ts  useCampaignSpecs.ts  useCampaigns.ts  useTargetGroups.ts
frontend/src/routes/: __root.tsx  assets.tsx  index.tsx  target-groups.tsx
frontend/src/routes/campaigns/: index.tsx  new.tsx
frontend/src/routes/campaigns/$campaignId/: flow.tsx  index.tsx
