[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "pydantic>=2.12.5",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.5",
    "httpx>=0.28.0",
    "sqlmodel>=0.0.27",
    "openai>=2.8.1",
    "pathlib>=1.0.1",
    "os-sys>=0.9.1",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

# Ruff linting and formating
[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.lint]
# Ruff linting rules: https://docs.astral.sh/ruff/rules/
# E: pycodestyle errors (PEP 8)
# F: pyflakes (basic Python errors)
# I: isort (import sorting)
# N: pep8-naming (naming conventions)
# W: pycodestyle warnings
# B: flake8-bugbear (catches likely bugs)
# UP: pyupgrade (suggests Python upgrades)
# PL: pylint (additional style checks)
# RUF: Ruff-specific rules
# ANN: flake8-annotations (type annotations)
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF", "ANN"]
ignore = ["B008"]  # Ignore function call in argument defaults (common in FastAPI with Depends)
fixable = ["ALL"] # Enable auto-fixing for all fixable issues
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
